--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -9,7 +9,7 @@
         justify-content: space-between
         flex-wrap: wrap
     &-title
-        ont-size: 26px
+        font-size: 26px
         font-weight: 700
         line-height: 48px
     &-subtitle
