--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -1,10 +1,11 @@
+*
+    box-sizing: border-box
 body
     +Regular
     img
         max-width: 100%
 
 .block
-    
     
     &-form
         max-width: 370px
@@ -61,6 +62,35 @@ body
     border: 1px solid #ffc600
     background-color: #e8e8e8
     background-image: linear-gradient(to bottom, #ffed26 0%, #ffb400 100%)
-    
+
+.head-title
+    color: #333333
+    font-size: 30px
+    font-weight: 700
+    text-transform: uppercase
+    text-align: center
+    margin: 0
+    padding-top: 80px
+    position: relative
+    &::before
+        content: ''
+        width: 170px
+        height: 7px
+        background: url('../img/line.png') no-repeat center
+        background-size: 100%
+        display: block
+        position: absolute
+        bottom: -25%
+        left: 43%
+@media screen and ( max-width: 768px  )
+    .head-title
+        &::before
+            left: 33%
+@media screen and ( max-width: 550px  )
+    .head-title
+        &::before
+            left: 30%
+
+        
         
 
