Created sections with photo and guarentee

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,3 +4,5 @@
 @import 'sections/navbar'
 @import 'sections/hero'
 @import 'sections/price'
+@import 'sections/works'
+@import 'sections/guarantee'
