--- a/css/style.css
+++ b/css/style.css
@@ -507,4 +507,90 @@ body img {
     display: none;
   }
 }
+
+.works-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 110px;
+}
+
+.works-windows {
+  -ms-flex-preferred-size: 25%;
+      flex-basis: 25%;
+  max-width: 270px;
+  max-height: 270px;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.works-windows::before {
+  content: '';
+  width: 40px;
+  height: 40px;
+  background: url("../img/works/zoom.png") no-repeat center;
+  background-size: 100%;
+  display: block;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+}
+
+@media screen and (max-width: 1199px) {
+  .works-wrap {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .works-windows {
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .works-windows {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+}
+
+.guarantee {
+  background: #ffffff url("../img/guarantee/guarant-bg.png") no-repeat center;
+  background-size: cover;
+}
+
+.guarantee-title {
+  color: #ffffff;
+}
+
+.guarantee-title::before {
+  content: '';
+  background: url("../img/guarantee/line-wt.png") no-repeat center;
+}
+
+.guarantee-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 100px;
+  text-align: center;
+  color: #ffffff;
+  font-family: "Open Sans - Semibold";
+}
+
+.guarantee-recomends {
+  -ms-flex-preferred-size: 33.33%;
+      flex-basis: 33.33%;
+  margin-bottom: 40px;
+}
 /*# sourceMappingURL=style.css.map */
