--- a/sass/sections/_hero.sass
+++ b/sass/sections/_hero.sass
@@ -66,6 +66,9 @@
             margin: 50px 0px
 @media screen and ( max-width: 768px )
     .hero
+        padding: 20px
+        background: #eeeef2
+
         &-group
             margin: 10px
 
