--- a/sass/sections/_price.sass
+++ b/sass/sections/_price.sass
@@ -1,6 +1,7 @@
 .price
-    padding-bottom: 100px
-.balcony  
+    padding-bottom: 50px
+.balcony 
+     
     &-type
         display: flex
         justify-content: space-around
@@ -8,17 +9,22 @@
         text-align: center
 
         margin-top: 110px
+        
     &-text
         display: block
         max-width: 150px
-        color: #249ae6
+
         font-size: 18px
         font-weight: 400
 
         margin: 40px 0
-        &:active
+    &-link 
+        color: #249ae6
+        &:hover
+            cursor: pointer
             text-decoration: none
             color: #000000
+        
 .weather
     display: flex
     flex-wrap: wrap
