--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,3 +6,7 @@
 @import 'sections/price'
 @import 'sections/works'
 @import 'sections/guarantee'
+@import 'sections/payment'
+@import 'sections/sale'
+@import 'sections/navigation'
+@import 'sections/footer'
