--- a/sass/sections/_guarantee.sass
+++ b/sass/sections/_guarantee.sass
@@ -1,6 +1,7 @@
 .guarantee
     background: #ffffff url('../img/guarantee/guarant-bg.png') no-repeat center
     background-size: cover
+    padding-bottom: 80px
     &-title
         color: #ffffff
         &::before
@@ -21,6 +22,11 @@
     &-recomends
         flex-basis: 33.33%
         margin-bottom: 40px
+@media screen and ( max-width: 550px  )
+    .guarantee
+        &-recomends
+            flex-basis: 50%
+    
         
         
 
